[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/Fruktur-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Images/DropSpiderBackground.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Menu Buttons.gd" type="Script" id=3]
[ext_resource path="res://Scenes/DestroyLine.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Spider.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Globals.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 75
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 75
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 75
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=5]

[sub_resource type="RectangleShape2D" id=6]

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
visible = false
margin_right = 1024.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Background"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Node2D" parent="."]

[node name="Title" type="Node2D" parent="UI"]

[node name="TitleText" type="Label" parent="UI/Title"]
margin_left = 259.0
margin_top = 8.0
margin_right = 771.0
margin_bottom = 109.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.882353, 0.203922, 0.203922, 1 )
text = "Drop Spider!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveTween" type="Tween" parent="UI/Title"]

[node name="Menu Buttons" type="Node2D" parent="UI"]
script = ExtResource( 3 )

[node name="Start" type="Node2D" parent="UI/Menu Buttons"]

[node name="StartMenu" type="VBoxContainer" parent="UI/Menu Buttons/Start"]
margin_left = 259.0
margin_top = 148.0
margin_right = 784.0
margin_bottom = 513.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="UI/Menu Buttons/Start/StartMenu"]
margin_right = 525.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="UI/Menu Buttons/Start/StartMenu"]
margin_top = 104.0
margin_right = 525.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 3 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="UI/Menu Buttons/Start/StartMenu"]
margin_top = 208.0
margin_right = 525.0
margin_bottom = 308.0
custom_fonts/font = SubResource( 4 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveTween" type="Tween" parent="UI/Menu Buttons/Start"]

[node name="Difficulty" type="Node2D" parent="UI/Menu Buttons"]

[node name="DifficultyMenu" type="VBoxContainer" parent="UI/Menu Buttons/Difficulty"]
margin_left = 1024.0
margin_top = 25.0
margin_right = 1549.0
margin_bottom = 574.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="Button" parent="UI/Menu Buttons/Difficulty/DifficultyMenu"]
margin_right = 525.0
margin_bottom = 100.0
theme = SubResource( 5 )
custom_fonts/font = SubResource( 2 )
text = "Easy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medium" type="Button" parent="UI/Menu Buttons/Difficulty/DifficultyMenu"]
margin_top = 104.0
margin_right = 525.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 3 )
text = "Medium"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard" type="Button" parent="UI/Menu Buttons/Difficulty/DifficultyMenu"]
margin_top = 208.0
margin_right = 525.0
margin_bottom = 308.0
custom_fonts/font = SubResource( 4 )
text = "Hard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="UI/Menu Buttons/Difficulty/DifficultyMenu"]
margin_top = 312.0
margin_right = 525.0
margin_bottom = 412.0
custom_fonts/font = SubResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveTween" type="Tween" parent="UI/Menu Buttons/Difficulty"]

[node name="Buttons" type="Node2D" parent="."]

[node name="Score" type="Node2D" parent="."]

[node name="Globals" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="DestroyLine" parent="." instance=ExtResource( 4 )]

[node name="Spider" parent="." instance=ExtResource( 6 )]
position = Vector2( 596, 114 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 0.58786, 1.47424 )
scale = Vector2( 51.12, 28.8 )
shape = SubResource( 6 )

[connection signal="pressed" from="UI/Menu Buttons/Start/StartMenu/Start" to="UI/Menu Buttons" method="_on_Start_pressed"]
[connection signal="pressed" from="UI/Menu Buttons/Start/StartMenu/Settings" to="UI/Menu Buttons" method="_on_Settings_pressed"]
[connection signal="pressed" from="UI/Menu Buttons/Start/StartMenu/Quit" to="UI/Menu Buttons" method="_on_Quit_pressed"]
[connection signal="pressed" from="UI/Menu Buttons/Difficulty/DifficultyMenu/Easy" to="UI/Menu Buttons" method="_on_Easy_pressed"]
[connection signal="pressed" from="UI/Menu Buttons/Difficulty/DifficultyMenu/Medium" to="UI/Menu Buttons" method="_on_Medium_pressed"]
[connection signal="pressed" from="UI/Menu Buttons/Difficulty/DifficultyMenu/Hard" to="UI/Menu Buttons" method="_on_Hard_pressed"]
[connection signal="pressed" from="UI/Menu Buttons/Difficulty/DifficultyMenu/Back" to="UI/Menu Buttons" method="_on_Back_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
